# Curator

./: .date_manifest  .gitignore  .history.pickle  Curate.py  CurateServer.py  Dockerfile  README.md  __init__.py  benchmarks.py  file_mode.py  input.csv  input.txt  load_rerankers.py  main.py  notes.txt  output.txt  pyproject.toml  readme.md  requirements.txt  rerank.py  results.json  setup.py  test_mcp.py  typescript  v3_implementation.md
.chroma_database/9ca0e2c1-3bda-48e9-b3a1-a8d1a3b05234/: index_metadata.pickle
Curator.egg-info/: PKG-INFO  SOURCES.txt
cache/: .curator_cache.db
src/curator/: curate.py
tests/: test_Curate.py
